--- a/style.css
+++ b/style.css
@@ -68,3 +68,19 @@ h1 {
 #colored-word {
     color: hsl(277, 64%, 61%);
 }
+
+@media screen and (min-width: 1000px) {
+    .container {
+        flex-direction: row;
+        width: 80%;
+        height: 50%;
+    }
+
+    .image-container {
+        order: 2;
+        width: 100%;
+        height: 250px;
+        border-bottom-right-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+}
