--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ body {
     height: 800px;
     background-color: hsl(244, 38%, 16%);
     border-radius: 10px;
+    overflow: hidden;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
@@ -60,27 +66,63 @@ h1 {
     background-image: url(images/image-header-mobile.jpg);
     background-size: cover;
     background-color: hsl(277, 64%, 61%);
+    background-position: center;
     background-blend-mode: multiply;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+}
+
+.stats-group {
+    display: flex;
+    flex-direction: column;
 }
 
 #colored-word {
     color: hsl(277, 64%, 61%);
 }
 
+
+
 @media screen and (min-width: 1000px) {
     .container {
         flex-direction: row;
-        width: 80%;
+        min-width: 80%;
         height: 50%;
+        min-height: 400px;
     }
 
     .image-container {
         order: 2;
-        width: 100%;
-        height: 250px;
+        flex-grow: 1;
+        height: 100%;
         border-bottom-right-radius: 10px;
         border-top-right-radius: 10px;
+        background-position: right;
+    }
+    
+    .content {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+    }
+
+    h1 {
+        width: 60%;
+        margin-top: 70px;
+    }
+    
+    .container p {
+        width: 60%;
+        margin-bottom: 60px;
+    }
+    
+    .stats-group {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+    }
+
+    .stats-element {
+        margin: 40px 30px;
     }
 }
